--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ body{
     max-width: 120rem;
     width: 90%;    
     margin: 0 auto;
-    background-color: rgb(176, 193, 193);
 }
 h1,h2,h3{
     font-weight: 900;
@@ -53,9 +52,97 @@ h3{
 img{
     max-width: 100%;
     display: block;
+    height: auto;
 }
 
 /* UTILIDADAES */
 .text-center{
     text-align: center;
+}
+/* DEGRADADOS */
+.degradado-verde{
+    color: transparent;
+    background: linear-gradient(to right, var(--primario) 0px, var(--secundario) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+/*  HEADER */
+header{
+    background-color: var(--negro);
+    padding: calc(var(--separacion) * 3) 0px;
+    color: var(--blanco);
+}
+
+@media (min-width: 768px) {
+    .contenido-header{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+.texto-header{
+    margin-top: var(--separacion);
+    text-align: center;
+}
+@media (min-width: 768px) {
+    .texto-header{
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 0px;
+    }
+}
+.texto-header p{
+    margin: 0px;
+    line-height: 1.2;
+}
+
+.tagline-producto{
+    font-size: 3rem;
+    font-weight: 900;
+}
+.nombre-producto{
+    font-size: 6rem;
+    margin: 0px;
+}
+@media (min-width: 768px) {
+    .nombre-producto{
+        font-size: 8rem;
+    }
+}
+
+
+/* SECCION 1 */
+.icono{
+    margin: 6rem auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+   
+}
+
+.icono-hijo{
+    text-align: center;
+    padding: calc(var(--separacion)/ 3);
+    box-shadow: 0px 0px 3px rgba(105, 118, 136, 0.489);
+    transition: all ease .8s;
+}
+.icono-hijo:hover{
+    box-shadow: 3px 3px 5px rgba(105, 118, 136, 0.489);
+}
+.icono-hijo h3{
+    margin: 0px;
+    color: var(--secundario);
+}
+.icono-hijo img{
+    width: 3rem;
+    margin: auto;
+}
+@media (min-width: 768px) {
+    .icono {
+        margin: 7.5rem auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
